tdf#149064 ensure interaction handler is present when transfering with webDAV

Change-Id: I7a31f708e6fe01f07c7187aacd4657b5c6156c82
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149722
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit 50848b06ea58a147f5b89f057880266518ce79e7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149697
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>